# sample_cmake_gtest_gcov

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build_debug.yml  build_release.yml
src/: CMakeLists.txt  bar.cxx  bar.h  foo.h
test/: CMakeLists.txt  tu_bar.cxx  tu_foo.cxx
